# AdventOfCode

./: Cargo.toml  JordiServal.js  README.md
2015/: Day1.js  Day2.js  Day3-1.js  Day3-2.js  Day4-1.js  Day4.js
2015/10/: JordiServal.js
2015/11/: JordiServal.js
2015/12/: JordiServal.js
2015/13/: JordiServal.js
2015/14/: JordiServal.js
2015/15/: JordiServal.js
2015/16/: JordiServal.js
2015/17/: JordiServal.js
2015/18/: JordiServal.js
2015/19/: JordiServal.js
2015/2/: JordiServal.js
2015/20/: JordiServal.js
2015/21/: JordiServal.js
2015/3/: JordiServal.js
2015/5/: JordiServal.js  Juan Legaz.cs
2015/6/: JordiServal.js
2015/7/: JordiServal.js
2015/8/: JordiServal.js
2015/9/: JordiServal.js
2016/01/: JordiServal.js  README.md
2016/02/: JordiServal.js  README.md
2016/03/: JordiServal.js  README.md
2016/04/: JordiServal.js  (+1 more)
2021/: Day1.js
2023/: Cargo.toml
2023/01/: JordiServal.js  MarcCejalvo.cs  README.md  pau.rs
2023/02/: JordiServal.js  MarcCejalvo.cs  pau.rs
2023/03/: JordiServal.js  MarcCejalvo.cs  README.md  pau.rs
2023/04/: JordiServal.js  MarcCejalvo.cs  README.md  pau.rs
2023/05/: JordiServal.js  README.md  pau.rs
2023/06/: JordiServal.js  MarcCejalvo.cs  README.md  input-pau.txt  pau.rs
2023/07/: JordiServal.js  README.md  pau.rs
2023/08/: JordiServal.js
2023/09/: JordiServal.js  README.md
2023/10/: JordiServal.js
2023/11/: JordiServal.js  README.md
2023/12/: JordiServal.js  README.md
2023/13/: JordiServal.js  README.md
2023/14/: JordiServal.js  README.md
2023/15/: JordiServal.js  README.md
(+240 files in other folders)
