[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "advent-of-code-2023-01"
path = "2023/01/pau.rs"

[[bin]]
name = "advent-of-code-2023-02"
path = "2023/02/pau.rs"

[[bin]]
name = "advent-of-code-2023-03"
path = "2023/03/pau.rs"

[[bin]]
name = "advent-of-code-2023-04"
path = "2023/04/pau.rs"

[[bin]]
name = "advent-of-code-2023-05"
path = "2023/05/pau.rs"

[[bin]]
name = "advent-of-code-2023-06"
path = "2023/06/pau.rs"

[[bin]]
name = "advent-of-code-2023-07"
path = "2023/07/pau.rs"