[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "advent-of-code-01"
path = "01/pau.rs"

[[bin]]
name = "advent-of-code-02"
path = "02/pau.rs"

[[bin]]
name = "advent-of-code-03"
path = "03/pau.rs"

[[bin]]
name = "advent-of-code-04"
path = "04/pau.rs"

[[bin]]
name = "advent-of-code-05"
path = "05/pau.rs"

[[bin]]
name = "advent-of-code-06"
path = "06/pau.rs"